[package]
name = "simple_LR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.35.4"
polars-core = {version = "0.35.4", features = ["ndarray"]}
arrow = "49.0.0"
serde = "1.0.126"
serde_derive = "1.0.126"
ndarray = "0.15.6"
nalgebra = "0.32.3"
smartcore = { version = "0.2.0", features=["ndarray-bindings"]}